Adicionado link pra um helloworkd em backbonejs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <header>
         <h1>P3applet</h1>
         <p>Trabalho para a materia de P3 UFAL</p>
+        <a href="Backbonejs helloworld"> Hello World em Backbonejs </a> 
 
         <p class="view"><a href="https://github.com/Joilnen/p3applet">View the Project on GitHub <small>Joilnen/p3applet</small></a></p>
 
