Mudado o link name denovo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>P3applet</h1>
         <p>Trabalho para a materia de P3 UFAL</p>
-        <a href="hello_backbone.html"> Hello World em Backbonejs </a> 
+        <a href="hello_backbonejs.html"> Hello World em Backbonejs </a> 
 
         <p class="view"><a href="https://github.com/Joilnen/p3applet">View the Project on GitHub <small>Joilnen/p3applet</small></a></p>
 
