--- a/hello_backbonejs.html
+++ b/hello_backbonejs.html
@@ -8,7 +8,7 @@
         <title> Hello World ! </title>
     </head>
     <body>
-        <button id = "add">Adicionar</button>
+        <button id = "add">Seu nome</button>
         <ul id = "list">
         </ul>
 
@@ -23,7 +23,8 @@
                     },
 
                     showPrompt: function () {
-                        var friend_name = prompt("Who is your friend?");
+                        var friend_name = prompt("Escreva seu nome:");
+                        alert("Seu nome: " + friend_name);
                     }
                 });
 
