--- a/huxley_land/index.html
+++ b/huxley_land/index.html
@@ -2,17 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Huxley Land</title>
-    <link href="huxley_land/Styles/Css-reset.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/Css-reset.css" rel="stylesheet" type="text/css" />
     <link href="huxley_land/Styles/Backboneapp.css" rel="stylesheet" type="text/css" />
 
-    <script src="huxley_land/Scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
+    <script src="Scripts/jquery-1.6.2.min.js" type="text/javascript"></script>
     <script src="huxley_land/Scripts/Jquery.tmpl.min.js" type="text/javascript"></script>
 
-    <script src="huxley_land/Scripts/underscore.js" type="text/javascript"></script>
-    <script src="huxley_land/Scripts/backbone.js" type="text/javascript"></script>
-    <script src="huxley_land/Scripts/Backboneapp.js" type="text/javascript"></script>
-    <script src="huxley_land/Scripts/crafty-min.js" type="text/javascript"></script>
-    <script src="huxley_land/Scripts/game.js" type="text/javascript"></script>
+    <script src="Scripts/underscore.js" type="text/javascript"></script>
+    <script src="Scripts/backbone.js" type="text/javascript"></script>
+    <script src="Scripts/Backboneapp.js" type="text/javascript"></script>
+    <script src="Scripts/crafty-min.js" type="text/javascript"></script>
+    <script src="Scripts/game.js" type="text/javascript"></script>
 
     <script type="text/template" id="item-tmpl">
         <div class="menu-item" id="item${attributes.position}">
